# diplom_in_ros

./: CMakeLists.txt  README.md  package.xml
config/: controller.yaml  gz_bridge.yaml  mapper_params_online_async.yaml  rotation_controller.yaml
launch/: gazebo.launch.py  gazebo_wheels.launch.py  gazebo_wheels_in_hard_environment.launch.py  rviz.launch.py
meshes/: Unnamed.FCStd  Unnamed1.20241214-213646.FCBak  Unnamed1.FCStd  base.STL  leg1_bottom_link.STL  leg1_medium_link.STL  leg1_upper_link.STL  leg1_wheel_link.STL  leg2_bottom_link.STL  leg2_medium_link.STL  leg2_upper_link.STL  leg3_bottom_link.STL  leg3_medium_link.STL  leg3_upper_link.STL  wheel.STL  world.STL
src/: from_zero_config_to_wheeled_stance.cpp  wheel_driver.cpp
urdf/: lidar.xacro  three_legged.urdf.xacro  three_wheeled.urdf.xacro
worlds/: mad_world.sdf
